# agentic-chat-inspector

./: .env.example  .gitignore  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/equity/audit/: route.ts
app/api/mcp/clinical-rag/: route.ts
app/api/mcp/draft-actions/: route.ts
app/api/providers/status/: route.ts
app/chat/: page.tsx
app/equity/: page.tsx
app/inspector/: page.tsx
equity_audit/: README.md  pyproject.toml
equity_audit/examples/toy_model/: generate.py
equity_audit/src/equity_audit/: __init__.py  audit.py  cli.py  langsmith_plugin.py  types.py
equity_audit/src/equity_audit/frameworks/: __init__.py  core20plus5.yml  gdpr_article22.yml  hipaa.yml  nice_esf_tier_b.yml
equity_audit/src/equity_audit/metrics/: __init__.py  compute.py  thresholds.py
equity_audit/src/equity_audit/report/: __init__.py  json_emitter.py  md_emitter.py  pdf_emitter.py
evals/: README.md  pyproject.toml
evals/src/evals/: __init__.py  cli.py  clinical.py  contracts.py  convert.py  dataset.py  experiment.py  online.py  target.py  tooluse.py
lib/: claude-subscription.ts  equity-types.ts  langsmith-feedback.ts  langsmith.ts  mcp-client.ts  online-eval.ts  prompts.ts  providers.ts
mcp-servers/clinical-rag-mcp/: README.md  package.json  server.ts
mcp-servers/clinical-rag-mcp/corpus/: kb.json  nice-snapshot.json
mcp-servers/clinical-rag-mcp/tools/: fhir.ts  kb.ts  nice.ts  pubmed.ts
mcp-servers/draft-actions-mcp/: README.md  package.json  server.ts
mcp-servers/draft-actions-mcp/tools/: calendar.ts  email.ts  file.ts  sandbox.ts
prompts/: golden-set-v1.json  system_v1.md  system_v2.md
public/demo/: equity-audit.json
scripts/: push_prompts.py  run_experiment.py  seed_langsmith_dataset.py  setup_annotation_queue.py  smoke_langsmith.py
