[project]
name = "equity-audit"
version = "0.1.0"
description = "Health-equity fairness audit library — fairlearn-backed metrics, slice engine, NICE ESF Tier B / NHS Core20PLUS5 / UK GDPR Art. 22 framework overlays, PDF + JSON + Markdown report emitters, and a LangSmith evaluator plugin."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "John de Graft-Johnson" }]
license = { text = "MIT" }
keywords = [
  "fairness",
  "health-equity",
  "responsible-ai",
  "fairlearn",
  "nice-esf",
  "core20plus5",
  "gdpr-article-22",
  "langsmith",
  "clinical-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fairlearn>=0.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "reportlab>=4.1",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
langsmith = ["langsmith>=0.4.40"]

[project.scripts]
equity-audit = "equity_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equity_audit"]
