[project]
name = "agentic-chat-inspector-evals"
version = "0.1.0"
description = "LangSmith evaluators + dataset + experiment runner for the agentic-chat-inspector portfolio project. Wraps clinical-rag-eval judges as @run_evaluator functions and adds a tool-use correctness evaluator."
requires-python = ">=3.11"
dependencies = [
    "langsmith>=0.4.40",
    "clinical-rag-eval @ file:///Users/john/Git/clinical-rag-eval",
    "httpx>=0.27",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
seed-dataset = "evals.cli:seed"
run-experiment = "evals.cli:experiment"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evals"]
